--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cycles">Cycles</a></li>
-        		<li><a href="/testimonials">testimonials</a></li>
+        		<li><a href="/testimonials">Testimonials</a></li>
     		</ul>
 		</nav>
 		<div class="container">
