--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Welcome!</h1>
-				<p>A cycles shop with soul</p>
+				<p>A cycle shop with a soul</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
