--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Escapades - For the Road & Beyond</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cycles">Cycles</a></li>
-        		<li><a href="/testimonials">Testimonials</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome!</h1>
-				<p>A cycle shop with a soul</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:ftrb.bikes@gmail.com">email</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Escapades For the Road & Beyond
+---
+<div class="blurb">
+	<h1>Hi, Welcome!</h1>
+	<p>The cycle shop with a soul</p>
+</div><!-- /.blurb -->
